项目打包之后，部署到服务器，刷新访问404解决方法（tips：已删除上一版方案 [32eb6a6]）

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>RecordMoneyAngular</title>
-  <base href="./">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script type="text/javascript">
     // Single Page Apps for GitHub Pages
